--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 {% block title %}Início{% endblock %}
 
 {% block content %}
-  <h1>Celulares</h1>
+  <div class="profile">
+    <p>Olá, <strong>{{ usuario }}</strong>!</p>
+  </div>
+  <h1>Estoque de aparelhos</h1>
   <table>
     <thead>
       <tr>
