--- a/templates/base.html
+++ b/templates/base.html
@@ -18,4 +18,7 @@
     {% block content %}{% endblock %}
   </main>
 </body>
+<footer>
+  <p>&copy; 2023 Loja de Celulares. Todos os direitos reservados.</p>
+</footer>
 </html>
