--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,3 +242,9 @@ body {
     width: 98.9%;
   }
   
+  tbody {
+    font-size: 20pt;
+    display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+  }
