--- a/static/css/market.css
+++ b/static/css/market.css
@@ -1,11 +1,18 @@
-
+  .img-logo {
+    width: 7%;
+  } 
+  .img-logo img{
+    width: 80%;
+  }  
+  
   /* Estilo do banner */
   .banner {
-    height: 500px;
-    background-image: url('https://picsum.photos/1000/500');
+    height: auto;
+    background-color: #FFF6EA;
     background-size: cover;
     background-position: center;
     position: relative;
+    margin-bottom: 15px;
   }
   
   .banner h1 {
@@ -21,7 +28,7 @@
   /* Estilo do menu */
   .menu {
     background-color: #333;
-    color: #fff;
+    color: #FFF6EA;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,12 +57,6 @@
     border-radius: 0.5rem;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-  }
-  
-  .card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
   }
   
   .card h2 {
@@ -152,10 +153,12 @@
   
     /* Definindo o estilo para o corpo da página */
   body {
-    margin: 0;
+    margin-left: 7%;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
+    background-color: #FFF6EA;
+    justify-content: center;
+    align-items: center;
   }
   
   /* Definindo o estilo para o cabeçalho */
@@ -195,7 +198,7 @@
   
   /* Definindo o estilo para cada card */
   .card {
-    width: 300px;
+    width: 90%;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -206,8 +209,9 @@
   /* Definindo o estilo para a imagem do card */
   .card img {
     width: 100%;
-    height: 200px;
-    object-fit: cover;
+    height: 400px;
+    object-fit: contain;
+    padding: 5px;
   }
   
   /* Definindo o estilo para o título do card */
@@ -240,12 +244,24 @@
   
   /* Definindo o estilo para o rodapé */
   footer {
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    background-color: #454545;
+    color: white;
+    font-size: 16px;
+    padding: 20px;
   }
   
+  footer p {
+    margin: 0;
+  }
+  
+  footer ul {
+    list-style: none;
+    margin: 10px 0 0;
+    padding: 0;
+  }
+  
+  footer li {
+    display: inline-block;
+    margin-right: 10px;
+    color: beige;
+  }
