--- a/templates/market.html
+++ b/templates/market.html
@@ -2,14 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Loja de Celulares</title>
+    <title>SmartHalph - Marketplace</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/market.css') }}">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Loja de Celulares</a>
+        <div class="img-logo">
+            <img src="/static/imgs/logo.png" alt="">
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +24,7 @@
                     <a class="nav-link" href="#">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
+                    <a class="nav-link" href="{{ url_for('login') }}">Administrador</a>
                 </li>
             </ul>
         </div>
@@ -30,7 +32,7 @@
 
     <!-- Banner -->
     <div class="banner">
-        <img src="{{ url_for('static', filename='imgs/banner.jpg') }}" alt="Banner" class="img-fluid">
+        <img src="{{ url_for('static', filename='imgs/banner.gif') }}" alt="Banner" class="img-fluid">
     </div>
 
     <!-- Produtos -->
@@ -39,21 +41,34 @@
             {% for celular in celulares %}
             <div class="col-md-4 mb-3">
                 <div class="card">
-                    <img src="{{ celular[4] }}" class="card-img-top" alt="...">
+                    <img src="{{ celular[5] }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{ celular[1] }}</h5>
                         <p class="card-text">{{ celular[2] }}</p>
                         <p class="card-text">R$ {{ celular[3] }}</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
+                        <a href="#" class="btn btn-primary" id="btnComprar-{{celular[1]}}" onclick="adicionarAoCarrinho(this.id)">Comprar</a>
+                    </div>                    
                 </div>
             </div>
             {% endfor %}
         </div>
     </div>
 
+    <!-- Popup do carrinho -->
+   
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='/js/script.js') }}"></script>
 </body>
+
+<footer>
+    <p>&copy; 2023 Todos os direitos reservados - SmartHalph Marketplace.</p>
+    <p>Desenvolvido por: </p>
+    <ul>
+      <li>Azura</li>
+      <li>Netero</li>
+      <li>Peregrinno</li>
+    </ul>
+  </footer>
 </html>
