--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,6 @@
   </main>
 </body>
 <footer>
-  <p>&copy; 2023 Loja de Celulares. Todos os direitos reservados.</p>
+  <p>&copy; 2023 SmartHalph. Todos os direitos reservados.</p>
 </footer>
 </html>
