--- a/templates/market.html
+++ b/templates/market.html
@@ -46,7 +46,7 @@
                         <h5 class="card-title">{{ celular[1] }}</h5>
                         <p class="card-text">{{ celular[2] }}</p>
                         <p class="card-text">R$ {{ celular[3] }}</p>
-                        <a href="#" class="btn btn-primary" id="btnComprar-{{celular[1]}}" onclick="adicionarAoCarrinho(this.id)">Comprar</a>
+                        <a href="javascript:void(0)" class="btn btn-primary" id="btnComprar-{{celular[1]}}" onclick="adicionarAoCarrinho('btnComprar-{{celular[1]}}')">Comprar</a>
                     </div>                    
                 </div>
             </div>
@@ -54,7 +54,38 @@
         </div>
     </div>
 
-    <!-- Popup do carrinho -->
+
+    <!-- Carrinho -->
+    <div class="container-cart">
+        <section >
+            <h2 class="section-title">Carrinho</h2>
+
+            <table class="cart-table">
+                <thead>
+                    <tr>
+                        <th class="table-head-item first-col">Item</th>
+                        <th class="table-head-item second-col">Preço</th>
+                        <th class="table-head-item third-col">Quantidade</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td colspan="3" class="cart-total-container">
+                            <strong>Total</strong>
+                            <span>R$0,00</span>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+
+            <button type="button" class="btn btn-primary">Finalizar Compra</button>
+
+        </section>
+    </div>
    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
