Apaga linhas em desuso

--- a/templates/add.html
+++ b/templates/add.html
@@ -8,6 +8,9 @@
     <label for="nome">Nome:</label>
     <input type="text" id="nome" name="nome" required>
 
+    <label for="url_celular">URL da imagem:</label>
+    <textarea name="url_celular" id="url_celular" required></textarea>
+
     <label for="descricao">Descrição:</label>
     <textarea id="descricao" name="descricao" required></textarea>
 
