--- a/static/css/market.css
+++ b/static/css/market.css
@@ -1,9 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+  
   .img-logo {
     width: 7%;
   } 
   .img-logo img{
     width: 80%;
-  }  
+  } 
   
   /* Estilo do banner */
   .banner {
@@ -43,53 +47,6 @@
     text-decoration: none;
     padding: 0.5rem;
   }
-  
-  /* Estilo dos cards de produtos */
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
-    margin-top: 2rem;
-  }
-  
-  .card {
-    background-color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-  }
-  
-  .card h2 {
-    font-size: 1.5rem;
-    margin: 1rem;
-  }
-  
-  .card p {
-    margin: 1rem;
-  }
-  
-  .card .price {
-    margin: 1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .card button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 1rem;
-    font-size: 1rem;
-    width: 100%;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .card button:hover {
-    background-color: #fff;
-    color: #333;
-    cursor: pointer;
-  }
-  
   /* Estilo do carrinho */
   .cart {
     position: fixed;
@@ -195,17 +152,11 @@
     flex-wrap: wrap;
     justify-content: space-around;
   }
-  
-  /* Definindo o estilo para cada card */
-  .card {
-    width: 90%;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
-    overflow: hidden;
+
+  #produtos:target {
+    scroll-margin-top: .8em;
   }
-  
+
   /* Definindo o estilo para a imagem do card */
   .card img {
     width: 100%;
@@ -266,6 +217,10 @@
     color: beige;
   }
 
+  .container {
+    margin-top: 30px;
+  }
+
   .container-cart {
     margin-top: 20px;
     position: fixed;
@@ -277,4 +232,8 @@
     box-shadow: 4px 5px 5px #00000030;
     width: 30%;
     font-size: 10pt;
+  }
+
+  .container-cart tbody td {
+    margin-right: 5px;
   }
