--- a/templates/market.html
+++ b/templates/market.html
@@ -58,33 +58,37 @@
 
     <!-- Carrinho -->
     <div class="container-cart">
-        <section >
+        <section>
             <h2 class="section-title">Carrinho</h2>
-
-            <table class="cart-table">
-                <thead>
-                    <tr>
-                        <th class="table-head-item first-col">Item</th>
-                        <th class="table-head-item second-col">Preço</th>
-                        <th class="table-head-item third-col">Quantidade</th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                </tbody>
-
-                <tfoot>
-                    <tr>
-                        <td colspan="3" class="cart-total-container">
-                            <strong>Total</strong>
-                            <span>R$0,00</span>
-                        </td>
-                    </tr>
-                </tfoot>
-            </table>
-
-            <button type="button" class="btn btn-primary">Finalizar Compra</button>
-
+    
+            <form action="/finalizar_compra" method="POST">
+                <table class="cart-table">
+                    <thead>
+                        <tr>
+                            <th class="table-head-item first-col">Item</th>
+                            <th class="table-head-item second-col">Preço</th>
+                            <th class="table-head-item third-col">Qtd.</th>
+                        </tr>
+                    </thead>
+    
+                    <tbody class="cart-tbody">
+                    </tbody>
+    
+                    <tfoot>
+                        <tr>
+                            <td colspan="3" class="cart-total-container">
+                                <strong>Total</strong>
+                                <span>R$0,00</span>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+    
+                <input type="hidden" name="cartItems" value="">
+                <input type="hidden" name="cartTotal" value="">
+    
+                <button type="submit" class="btn btn-primary" onclick="{{ url_for('finalizar_compra', cartItems=cartItems, cartTotal=cartTotal) }}">Finalizar Compra</button>
+            </form>
         </section>
     </div>
    
